[tool.poetry]
name = "leetcode-solutions"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
atomicwrites = "^1.4.0"
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
